# microsolvator

./: .gitignore  README.md  microsolvator_plan.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  installation.md  reference.md  solvation_workflow_design.md  usage.md
docs/api/: microsolvator.md  workflow.md
docs/guide/: microsolvation.md  workflow.md
microsolvator/: __init__.py  command.py  config.py  install.py  results.py  runner.py  support.py
microsolvator/workflow/: __init__.py  builder.py  config.py  equilibration.py  packmol.py  results.py  swap.py  utils.py
notebooks/: test_microsolvator.ipynb
tests/: test_code_review_fixes.py  test_integration.py  test_microsolvator.py  test_workflow.py
