[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "microsolvator"
version = "0.0.1"
description = "ASE wrapper for CREST microsolvation workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mingi KANG" }
]
dependencies = [
  "ase>=3.26.0",
  "numpy==1.26",
]

[project.optional-dependencies]
tests = [
  "pytest>=8.4",
]

[project.urls]
Homepage = "https://github.com/kanmg/microsolvator"

[tool.hatch.build.targets.wheel]
packages = ["microsolvator"]

[tool.hatch.envs.tests]
dependencies = ["pytest>=8.4"]
commands = [["python", "-m", "pytest"]]
